--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "node": "^20.18.0",
-    "repopack": "^0.1.42"
+    "redis": "^4.7.0",
+    "repopack": "^0.1.42",
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
