--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,8 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "framer-motion": "^11.11.9",
     "gsap": "^3.12.5",
     "lucide-react": "^0.453.0",
