--- a/FE/package.json
+++ b/FE/package.json
@@ -15,10 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "lucide-react": "^0.453.0",
     "node-cron": "^3.0.3",
@@ -30,10 +32,12 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.0",
+    "repomix": "^0.2.39",
     "repopack": "^0.1.43",
     "shadcn-ui": "^0.9.2",
     "socket.io-client": "^4.8.0",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^3.0.2",
     "three": "^0.169.0",
     "web-vitals": "^2.1.4"
   },
@@ -62,8 +66,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
